--- a/HogwartsPotions.csproj
+++ b/HogwartsPotions.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Models\Dtos\" />
   </ItemGroup>
 
 </Project>
