--- a/HogwartsPotions.csproj
+++ b/HogwartsPotions.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Models\Dtos\" />
+    <Folder Include="Services\Interface\" />
   </ItemGroup>
 
 </Project>
